[package]
name = "rbatis-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rbs = "4.4.1"
rbatis = "4.4.18"
rbdc-oracle = "0.4.0"
serde = { version = "1.0.190", features = ["derive"] }
tokio = { version = "1.33.0", features = ["full"] }
log = "0.4.20"
fast_log = "1.6.10"
